--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>GitHub Pages</h1>
-  <p>これはGitHubで公開している静的なWebページです。</p>
+  <header>
+    <div class="container">
+      <h1>My Website</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section>
+      <h2>Welcome!</h2>
+      <p>これはGitHub Pagesで公開する静的なWebサイトのサンプルです。</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 My Website</p>
+  </footer>
 </body>
 </html>
