--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>モバイル対応サイト</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>My Website</h1>
+      <h1>モバイル対応サイト</h1>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html">ホーム</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
     <section>
-      <h2>Welcome!</h2>
-      <p>これはGitHub Pagesで公開する静的なWebサイトのサンプルです。</p>
+      <h2>ようこそ！</h2>
+      <p>このサイトはGitHub Pagesで公開されており、スマホでも快適に見られます。</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 My Website</p>
+    <p>&copy; 2025 test</p>
   </footer>
 </body>
 </html>
